# opencvPractice

./: README.md  example.cpp  smoothimg.cpp
objectRemove/: CMakeLists.txt  README  README.md
objectRemove/examples/: inpaint_image_criminisi.cpp
objectRemove/inc/inpaint/: criminisi_inpainter.h  patch.h  stats.h
objectRemove/src/: criminisi_inpainter.cpp  template_match_candidates.cpp
others/: CMakeLists.txt  README.md
texture-synthesis/: CMakeLists.txt  foregroundRemoval.cpp
